tests/vertical-slice/reject/wire_cbor_vec_owned_compound_rejected.hew
// Reject: a `Vec` whose element is an `Option` with a heap-owning payload
// (`Option<string>`) has no synthesised clone/drop thunk path for the
// owned-element Vec runtime, so it fails closed at owned-element Vec admission
// (`Vec::new`) — before the wire-body floor is even reached. `Option<i64>`
// (all-scalar) is a first-class inline layout Vec element; the heap-owning
// payload is the unsupported shape here. (bytes, indirect-enum, and
// HashMap/HashSet elements remain rejected as well.)
#[wire]
type Holder {
    xs: Vec<Option<string>> @1,
}

fn main() -> i64 {
    let xs: Vec<Option<string>> = Vec::new();
    let h = Holder { xs: xs };
    let back = Holder.decode(h.encode());
    back.xs.len()
}
